fix: removed .recipe-search-results from display when not used to fix footer spacing issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -111,6 +111,7 @@ nav, footer, .modal-body {
 .footer-background {
     position: relative;
     z-index: 0;
+    min-height: 60px;
     height: 100%;
     background-image: url("images/choppingboard-footer-background.jpg");
     background-color: #c4c4c4;
@@ -232,8 +233,8 @@ footer a:hover{
         margin-bottom: -65px;
     }
     .footer-mask-2 {
-        height: 120px;
-        margin-bottom: -50px;
+        height: 136px;
+        margin-bottom: -70px;
     }
     .footer-mask-3 {
         background-color: #fff;
@@ -413,7 +414,7 @@ footer a:hover{
         margin-right: 45px
     }
     .main-body {
-        min-height: calc(100vh - 177px);
+        min-height: calc(100vh - 178px);
     }
 }
 
@@ -506,6 +507,7 @@ h1 {
 }
 
 .recipe-search-results {
+    display: none;
     position: relative;
     z-index: 1;
     text-align: left;
